# smartwater_radar

./: .gitignore  CMakeLists.txt  README.md
components/esp-modbus/: Kconfig
components/esp-modbus/freemodbus/common/: esp_modbus_master.c
components/espressif__esp_modem/: .component_hash  idf_component.yml
components/espressif__esp_modem/examples/modem_tcp_client/main/: CMakeLists.txt
components/espressif__esp_modem/include/cxx_include/: esp_modem_command_library.hpp
components/espressif__esp_modem/include/generate/: esp_modem_command_declare.inc
components/espressif__esp_modem/port/linux/esp_netif_linux/: CMakeLists.txt
components/espressif__esp_modem/src/: esp_modem_c_api.cpp  esp_modem_command_library.cpp
components/ssd1306/: ssd1306_i2c.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
main/libs/inc/: adcsensor.h  httprelated.h  internet.h  lowpowerfunctions.h  modbussettings.h  modemrelated.h  pressuresensor.h  radarsensor.h  sdcard.h  sensor.h  statistics.h  tdssensor.h  ultrasonicsensor.h
main/libs/src/: adcsensor.c  display.c  httprelated.c  i2cdev.c  internet.c  lowpowerfunctions.c  modbussettings.c  modemrelated.c  pressuresensor.c  radarsensor.c  sdcard.c  sensors.c  statistics.c  tdssensor.c  ultrasonicsensor.c
