idf_component_register(SRCS     "main.c"
                                "libs/src/i2cdev.c" 
                                "libs/src/sensors.c"
                                "libs/src/display.c"
                                "libs/src/internet.c"
                                "libs/src/modemrelated.c"
                                "libs/src/httprelated.c"
                                "libs/src/statistics.c"
                                "libs/src/ultrasonicsensor.c"
                                "libs/src/radarsensor.c"
                                "libs/src/tdssensor.c"
                                "libs/src/modbussettings.c"
                                "libs/src/adcsensor.c"
                                "libs/src/pressuresensor.c"
                                "libs/src/sdcard.c"
                                "libs/src/lowpowerfunctions.c"
                INCLUDE_DIRS    "." 
                                "libs/inc"
                                "../components/esp-modbus" 
                                "../components/espressif__esp_modem"  
                                "../components/button"                                 
                                "../components/ssd1306")

